documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

typedef struct
{
	USHORT	vercount;
	USHORT	timestampl;
	USHORT	timestamph;
	USHORT	activity;
	ULONG   data;
	USHORT  wordnum;       //ARINC 717 records only
	USHORT  subframe;      //ARINC 717 records only
	USHORT  superframe;    //ARINC 717 records only
} SEQRECORD;
typedef SEQRECORD * LPSEQRECORD;

typedef struct
{
    USHORT msgopt;              //User writes message options
    USHORT msgact;              //Card writes message activity
    union {
		ULONG  msgdata;         //Card/User writes message data (Rcv/Xmt)
		ULONG  listptr;         //User writes list buffer pointer
	};
    union {
		ULONG  timetag;         //Card writes time tag
		ULONG  hitcount;        //Card writes hit count
	};
	union {
		ULONG  maxtime;			//Card writes max time
		ULONG  elapsetime;      //Card writes elapsed time
    };
	ULONG  mintime;	            //Card writes min time
    ULONG  userptr;             //User writes user code pointer
    ULONG  miscptr;             //User writes misc. pointer
    ULONG  rsvd;	            //Reserved
} MSGFIELDS;
typedef MSGFIELDS * LPMSGFIELDS;

L43W32API VOID __stdcall L43_GetChanCount(LPINT rcvcount,LPINT xmtcount,HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntConfig(USHORT configval,USHORT count,HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntInstall(LPVOID hEvent,HCARD handleval);

L43W32API ULONG __stdcall L43_IntRd(LPUSHORT typeval,LPULONG infoval,HCARD handleval);

L43W32API VOID __stdcall L43_IntReset(HCARD handleval);

L43W32API INT __stdcall L43_IntStatus(HCARD handleval);

L43W32API ERRVAL __stdcall L43_IntUninstall(HCARD handleval);

L43W32API BOOL __stdcall L43_IsChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_IsRcvChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_IsXmtChan(INT channum,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListAsyncCreate(ULONG listconfigval,INT count,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_ListDataRd(LISTADDR listaddr,HCARD handleval);

L43W32API BOOL __stdcall L43_ListDataWr(ULONG value,LISTADDR listaddr,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListRcvCreate(ULONG listconfigval,INT count,MSGADDR msgaddr,HCARD handleval);

L43W32API LISTADDR __stdcall L43_ListXmtCreate(ULONG listconfigval,INT count,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgBlockRd(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgBlockWr(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgCommRd(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgCommWr(LPMSGFIELDS msgfields,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgCreate(ULONG configval,HCARD handleval);

L43W32API ULONG __stdcall L43_MsgDataRd(MSGADDR msgaddr,HCARD handleval);

L43W32API VOID __stdcall L43_MsgDataWr(ULONG value,MSGADDR msgaddr,HCARD handleval);

L43W32API BOOL __stdcall L43_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedBranch(USHORT condition,SCHNDX destindex,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedCall(USHORT condition,SCHNDX destindex,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedEntry(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedGap(USHORT gapval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedGapFixed(USHORT gapval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedGapList(USHORT gapval,LISTADDR listaddr,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedHalt(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedInt(USHORT condition,USHORT tagval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedMsg(MSGADDR msgaddr,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedMsgEx(MSGADDR msgaddr,USHORT gapval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedPause(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedPulse(INT dionum,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedRestart(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedReturn(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SeqConfig(ULONG configval,HCARD handleval);

L43W32API INT __stdcall L43_SeqInterval(INT interval,INT mode,HCARD handleval);

L43W32API USHORT __stdcall L43_SeqIntFrequency(USHORT intfreq,HCARD handleval);

L43W32API BOOL __stdcall L43_SeqIsRunning(HCARD handleval);

L43W32API USHORT __stdcall L43_SeqRd(LPSEQRECORD buf,HCARD handleval);

L43W32API BOOL __stdcall L43_SeqStatus(HCARD handleval);

L43W32API VOID __stdcall L43_TimerClear(HCARD handleval);

L43W32API ULONG __stdcall L43_TimerRd(HCARD handleval);

L43W32API INT __stdcall L43_TimerResolution(INT timerresol,HCARD handleval);


/**
*
*  L43/717 functions.
*
**/

L43W32API ERRVAL __stdcall L43_Ch717Status(LPUSHORT buf,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_Get717ChanCount(LPINT rcvcount,LPINT xmtcount,HCARD handleval);

L43W32API BOOL __stdcall L43_Is717BiPhaseChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_Is717Chan(INT channum,HCARD handleval);