documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS

        [DllImport("L43W32.DLL", EntryPoint = "_L43_GetChanCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_GetChanCount(ref Int32 rcvcount, ref Int32 xmtcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntConfig(UInt16 configval, UInt16 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_IntRd(ref UInt16 typevalval, ref UInt32 infoval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_IntReset(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntStatus(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntUninstall(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IsChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IsChan(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IsRcvChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IsRcvChan(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IsXmtChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IsXmtChan(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListAsyncCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListAsyncCreate(UInt32 listconfigval, Int32 count, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListDataRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListDataRd(UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListDataWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ListDataWr(UInt32 value, UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListRcvCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListRcvCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListXmtCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListXmtCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgBlockRd(ref MSGFIELDS msgfields, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgBlockWr(ref MSGFIELDS msgfields, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgCommRd(ref MSGFIELDS msgfields, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgCommWr(ref MSGFIELDS msgfields, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgCreate@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgCreate(UInt32 configval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgDataRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgDataRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgDataWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MsgDataWr(UInt32 value, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_MsgIsAccessed(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedBranch@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedBranch(UInt16 condition, Int32 destindex, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedBuild@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedBuild(Int32 nummsgs, ref UInt32 msgaddr, ref Int32 minperiod, ref Int32 maxperiod, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedCall@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedCall(UInt16 condition, Int32 destindex, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedEntry@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedEntry(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedGap(UInt16 gapval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedGapFixed@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedGapFixed(UInt16 gapval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedGapList@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedGapList(UInt16 gapval, UInt32 listaddr, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedHalt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedHalt(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedInt@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedInt(UInt16 condition, UInt16 tagval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedMsg(UInt32 msgaddr, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedMsgEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedMsgEx(UInt32 msgaddr, UInt16 gapval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedPause(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedPulse@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedPulse(Int32 dionum, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedRestart(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SchedReturn@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SchedReturn(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SeqConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SeqConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SeqInterval@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SeqInterval(Int32 interval, Int32 mode, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SeqIntFrequency@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_SeqIntFrequency(UInt16 intfreq, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SeqIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SeqIsRunning(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SeqRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_SeqRd(ref SEQRECORD buf, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_SeqStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_SeqStatus(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_TimerClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_TimerClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_TimerRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_TimerRd(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_TimerResolution@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_TimerResolution(Int32 timerresol, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Ch717Status@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_Ch717Status(ref UInt16 buf, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Get717ChanCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_Get717ChanCount(ref Int32 rcvcount, ref Int32 xmtcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Is717BiPhaseChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_Is717BiPhaseChan(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Is717Chan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_Is717Chan(Int32 channum, UInt32 handleval);
